--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           points to ensure that your project is successful
         </p>
       </header>
-      <section>
+      <div class="box1">
         <article class="supervisor">
           <h3>Supervisor</h3>
           <p>Monitors activity to identify project roadblocks</p>
@@ -31,7 +31,7 @@
             <img src="images/icon-supervisor.svg" alt="" />
           </div>
         </article>
-        <section class="team">
+        <div class="box2">
           <article class="team-builder">
             <h3>Team Builder</h3>
             <p>
@@ -58,7 +58,7 @@
             <img src="images/icon-calculator.svg" alt="" />
           </div>
         </article>
-      </section>
+      </div>
     </main>
 
     <footer>
