--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
           points to ensure that your project is successful
         </p>
       </header>
-      <div class="box1">
+      <section>
         <article class="supervisor">
-          <h3>Supervisor</h3>
+          <h2>Supervisor</h2>
           <p>Monitors activity to identify project roadblocks</p>
           <div class="icon">
             <img src="images/icon-supervisor.svg" alt="" />
           </div>
         </article>
-        <div class="box2">
+        <section class="team">
           <article class="team-builder">
-            <h3>Team Builder</h3>
+            <h2>Team Builder</h2>
             <p>
               Scans our talent network to create the optimal team for your
               project
@@ -43,22 +43,20 @@
             </div>
           </article>
           <article class="karma">
-            <h3>Karma</h3>
+            <h2>Karma</h2>
             <p>Regularly evaluates our talent to ensure quality</p>
             <div class="icon"><img src="images/icon-karma.svg" alt="" /></div>
           </article>
         </section>
 
         <article class="calculator">
-          <h3>Calculator</h3>
-          <p>
-            Uses data from past projects to provide better delivery estimates
-          </p>
+          <h2>Calculator</h2>
+          <p>Uses data from past projects to provide better delivery estimates</p>
           <div class="icon">
             <img src="images/icon-calculator.svg" alt="" />
           </div>
         </article>
-      </div>
+      </section>
     </main>
 
     <footer>
