--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           points to ensure that your project is successful
         </p>
       </header>
-      <section>
+      <div class="box1">
         <article class="supervisor">
           <h2>Supervisor</h2>
           <p>Monitors activity to identify project roadblocks</p>
@@ -31,7 +31,7 @@
             <img src="images/icon-supervisor.svg" alt="" />
           </div>
         </article>
-        <section class="team">
+        <div class="box2">
           <article class="team-builder">
             <h2>Team Builder</h2>
             <p>
@@ -47,16 +47,18 @@
             <p>Regularly evaluates our talent to ensure quality</p>
             <div class="icon"><img src="images/icon-karma.svg" alt="" /></div>
           </article>
-        </section>
+        </div>
 
         <article class="calculator">
           <h2>Calculator</h2>
-          <p>Uses data from past projects to provide better delivery estimates</p>
+          <p>
+            Uses data from past projects to provide better delivery estimates
+          </p>
           <div class="icon">
             <img src="images/icon-calculator.svg" alt="" />
           </div>
         </article>
-      </section>
+      </div>
     </main>
 
     <footer>
